CHG: logic for tooltip

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Create Your Stub | Checkstub Maker | ThePayStubs.com</title>
     <link rel="canonical" href="https://www.thepaystubs.com/create-stub" />
-    <link rel="stylesheet" href="./src/css/tooltip.css" />
     <script src="./src/js/tooltip.js"></script>
     <style>
       html {
@@ -3358,6 +3357,7 @@
         margin-right: 10px;
       }
     </style>
+    <link rel="stylesheet" href="./src/css/tooltip.css" />
   </head>
   <body class="">
     <div class="site-wrapper">
@@ -6424,7 +6424,11 @@
       </footer>
     </div>
     <script>
-      setToolTip({ selector: ".form-block", content: "wwwwwwwwww" });
+      setToolTip({
+        selector: ".form-block",
+        content:
+          "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s",
+      });
     </script>
   </body>
 </html>
