--- a/index.html
+++ b/index.html
@@ -6044,7 +6044,7 @@
 
 
     for (var i = 0; i < formBlocks.length; i++) {
-    setToolTip({el: formBlocks[i], content: `Enter the name of the company`})
+    setToolTip({el: formBlocks[i], content: `Enter the name of the`})
   }
    
 // setToolTip({
