--- a/index.html
+++ b/index.html
@@ -6044,7 +6044,7 @@
 
 
     for (var i = 0; i < formBlocks.length; i++) {
-    setToolTip({el: formBlocks[i], content: `dummy text dummy text dummy text dmy text dummyt`})
+    setToolTip({el: formBlocks[i], content: `dummy text dummy text dummy text dmy text dummyt`, forceTop: true})
   }
    
 // setToolTip({
